
103/2:

 * Fixed unreliable menu keybindings, especially cut-and-paste. More
   technically, fixed menu shortcut handling to call the menu bar's
   `on-demand' method before looking for a key binding.

 * Fixed bug in text%'s autowrapper. The bug would manifest itself if
   snips were deleted from a line created by autowrapping, leaving
   nothing on the line except a newline. (PR 1592)

 * Windows: fixed double-insertion of numbers from Windows numpad. (PR
   1588 and plt-scheme msg)

 * X: made Alt/Meta release dismiss active menu in the menu bar if one
   is active, like ESC. (PR 1581)

103/1:

 * Added support for JPEG file loading (but not saving) using the IJG
   library. The MrEd executable grew by 70k, which seemed
   like an acceptable amount of bloat for the benefit.

 * Windows: editors can paste bitmaps copied to the clipboard from
   other programs.

 * Windows: fixed get-file-list. (PR 1567)

 * Added `get-clipboard-bitmap' and `set-clipboard-bitmap' to
   clipboard<%>. Under Windows, these methods move bitmaps to and from
   the system in a platform-specific format.

 * Changed `graphical-read-eval-print-loop' to take an optional eventspace
   argument, which determines the evaluation eventspace. The argument
   defaults to #f, which creates a new eventspace for evaluation.

 * Removed 'anchored flag for snip% (wasn't implemented).

----------------------------------------------------------------------

Version 103: ??

Removed 'anchored flag for snip% (wasn't implemented)
Added support for loading JPEG file (but not saving)
Added get-clipboard-bitmap and set-clipboard-bitmap to
 clipboard<%>
Changed graphical-read-eval-print-loop to take an optional
 eventspace argument, which determines the evaluation eventspace
Fixed menu shortcut handling to call the menu bar's `on-demand'
 method before looking for a key binding
Fixed auto-wrapping bug in text%
Windows: editors can paste bitmaps copied to the
 clipboard from other programs